# erl_common_ros

./: CMakeLists.txt  README.md  erl_common_ros.repos  package.xml
config/: qos_override.yaml
docker/: build.bash
docker/ros-humble/: Dockerfile  build.bash
docker/ros-jazzy/: Dockerfile  build.bash
docker/ros-noetic/: Dockerfile  build.bash
docker/ros1-bridge/: Dockerfile  build.bash  entrypoint.sh
launch/: play_bag.launch.py
scripts/: .env  convert_rosbag_1to2.bash  create_workspace.bash  rosbag_converter.yml  run_ros1_bridge.bash  run_ros1_core.bash
src/ros1/: clock_node.cpp  ros.cmake  transform_to_tf_node.cpp
src/ros2/: clock_node.cpp  ros.cmake  transform_to_tf_node.cpp
